# PenguinPi-robot

./: .gitignore  README.md  penguinPi.py
atmelStudio/: PenguinPi - HAT - V1.atsln  oled_data.h
atmelStudio/PenguinPi - HAT - V1/: PCA6416A.h  PenguinPi - HAT - V1.componentinfo.xml  main.c
atmelStudio/PenguinPi - HAT - V1/Debug/: Makefile  PenguinPi - HAT - V1.elf  PenguinPi - HAT - V1.hex  PenguinPi - HAT - V1.map  main.d
atmelStudio/PenguinPi - HAT - V1/lib/: twi.h  uart.c  uart.h
atmelStudio/V2.0/: Makefile  datagram.c  datagram.h  global.h  hat.c  hat.h  io.c  io.h  main.c  main.elf  main.hex  motor.c  motor.h  oled_data.h  timer.c  timer.h
atmelStudio/V2.0/lib/: PenguinPi.c  PenguinPi.h  twimaster.c  twimaster.d
doc/: Makefile  motor.eps  robot.tex
hardware/: 180102.cdr  PenguinPi_v2.PcbLib  PenguinPi_v2.SchLib  SBDef2 with wheels and PCBs V3.SLDASM
hardware/EncoderArm_Hall/: EncoderArm.PcbDoc  EncoderArm.PcbDoc.htm  EncoderArm.PrjPcb
hardware/EncoderArm_Hall/Project Outputs for EncoderArm/: Board Information - EncoderArm.html  Board Information - EncoderArm.txt  Design Rule Check - EncoderArm.drc  Design Rule Check - EncoderArm.html  EncoderArm-macro.APR_LIB  (+20 more)
hardware/EncoderArm_Photo/: EncoderArm_Photo.PcbDoc
hardware/EncoderArm_PhotoReflector/: EncoderArm_PhotoReflector.PcbDoc  EncoderArm_PhotoReflector.PrjPcb  EncoderArm_PhotoReflector.PrjPcbStructure  EncoderArm_PhotoReflector.SchDoc
hardware/HAT_ID01_OLED/: HAT_ID01_OLED.OutJob  HAT_ID01_OLED.PcbDoc  HAT_ID01_OLED.PcbDoc.htm  HAT_ID01_OLED.PrjPcb  HAT_ID01_OLED.PrjPcbStructure  HAT_ID01_OLED.SchDoc  HAT_ID01_OLED.err  HAT_ID01_OLED.step  ~$HAT_ID01_OLED.SLDASM
hardware/HAT_ID02_IMU/: BOM_PCBCart.xls  HAT_ID02_IMU.PcbDoc  HAT_ID02_IMU.PcbDoc.htm  HAT_ID02_IMU.PrjPcb  HAT_ID02_IMU.PrjPcbStructure  HAT_ID02_IMU.SchDoc
hardware/MainBoard/: PenguinPi.PcbDoc  PenguinPi.PcbDoc.htm  PenguinPi.PrjPcb  PenguinPi.SchDoc  Settings_FUSES.txt
matlab/: PiBot.m  README.md  cameratest.m  ppweb_test.mlx  ppweb_test2.mlx  square.m
python/: GPIOSoftShutdown.py  defines.py  echo.py  ifup_oled_update.py  penguinPi.py  preview.py  server-motors.py  test-motor-gain.py  test3.py  test_dip.py
python/flask/: penguinPi.py  ppweb.py
python/localiser/: image_loc.py  localiser.py  stream.py  video.py
python/robot/: README.md  penguinPi.py
python/test/: adc.py  display.py  ipaddr.py  motor-gain.py  motor.py  setget.py  stress.py  test3.py  usertext.py
scripts/: .localiser.sh  .startup-servers.sh  autohotspotN  ifupdown.sh  image_loc.py  socket_helpers.py  startup_check.sh  update_networking_script.sh  wpa_supplicant_default.conf
software/: README-WiFi.md  README.md  localiser.md  penguinPi.py
software/atmelStudio/: Makefile  global.h  hat.c  io.c  motor.c
software/doc/: refs.bib  robot.tex
software/localiser/: .install.sh.bak  CMakeLists.txt  LOCALISER.sh  README.md  build.sh  configure.sh  deploy_webserver.sh  install.sh  installer.sh  localiser.service  measure_frame_time.py  setup-web.sh
software/localiser-mk-2/: CMakeLists.txt  LOCALISER.sh  README.md  RUN.sh  arena.ppm  build.sh  configure.sh  setup.sh  test-client.c  test-server.c
software/localiser-mk-2/include/: box.h  contours.h  led.h  pose.h  shmemkey.h  vision.h
software/localiser-mk-2/server/: default  php.ini
software/localiser-mk-2/server/EGB439/: Makefile  cgi.cpp
software/localiser-mk-2/server/EGB439/pose/get/: index.php
software/localiser-mk-2/server/console/: drag.js  index.php  kill_localiser.php  style.css  tie_points.json
software/localiser-mk-2/src/: cgi.cpp  contours.cpp  led.cpp  main.cpp  vision.cpp
software/localiser-mk-2/testing/: README.md  env.sh  locustfile.py
software/localiser-mk-2/testing/Flask-desktop-testbed/: localiser.py
software/localiser-mk-2/testing/results/50_users_single_client/: requests_1579240550.5930996.csv  stats_history_1579240552.0402482.csv
software/localiser/app/: CMakeLists.txt  main.cpp
software/localiser/config/: default  localiser.service  videostream.service
software/localiser/include/: led.h  localiser.h  pose.h  sock_srvr.h  types.h  vision_utils.h
software/localiser/libs/: CMakeLists.txt
software/localiser/libs/include/: penguinpi.h
software/localiser/libs/src/: led.cpp  localiser.cpp  localiser.h  rtstream.cpp  rtstream.h  tcp_srvr.cpp  udp_srvr.cpp  udp_srvr.h
software/localiser/libs/tests/: 01_stream.cpp  02_realtime.cpp  05_simpleudpserver.cpp  07_tcpclass.cpp  09_cvopencamera.cpp  10_servestreamtcp.cpp  11_localiser_and_stream_thread.cpp  12_parse_request.cpp  13_pose_and_save_photo.cpp  cvopencamera.cpp  forwardstream.cpp  framedecoding.cpp  localisationspeed.cpp  servestreamtcp.cpp  simpletcpserver.cpp  stream.cpp  tcpclass.cpp  tcpclient.cpp
software/localiser/scripts/: cleanup.sh  localiser.cleanup  localiser.launch  localiser.py  localiser.sh  videostream.launch  videostream.sh
software/localiser/server/: default  php.ini
software/localiser/server/camera/get/: index.php
software/localiser/server/console/: drag.js  index.php  kill_localiser.php  style.css
software/localiser/server/pose/: pose_get.php
software/localiser/server/pose/get/: index.php
software/localiser/src/: .localiser.cpp.swp  cgi.cpp  led.cpp  localiser.cpp  main.cpp  sock_srvr.cpp  vision_utils.cpp
software/localiser/testing/: README.md  get  imshowtest.py  localiserTESTING.py  locustfile.py  requirements.txt  testdisplay.py  testrealtime.cpp  teststream.cpp
software/localiser/www/: standalone-react-test.html
software/localiser/www/camera/get/: index.php
software/localiser/www/console/: console.js  index.php  kill_stream.php  tiepoint_update.php
software/localiser/www/pose/get/: index.php
software/matlab/: PiBot.m  README.md  cameratest.m  motortest.m  ppweb_test.mlx  ppweb_test2.mlx  vect2img.m
software/scripts/: .localiser.sh  .startup-servers.sh  GPIOSoftShutdown.py  autohotspotN  clean_authentification.sh  feh.sh  ifupdown.sh  old-setup-pi-network  screen.sh  setup_proxy.sh  startup_check.sh  update_networking_script.sh  wpa_supplicant_default.conf
(+435 files in other folders)
